--- a/app/templates/users/add.html
+++ b/app/templates/users/add.html
@@ -22,18 +22,15 @@
                                     <input class="form-check-input" 
                                            type="radio" 
                                            name="user_type" 
-                                           id="type_{{ type.value }}" 
+                                           id="type_{{ type.name }}" 
                                            value="{{ type.value }}"
                                            {% if loop.first %}checked{% endif %}
                                            required>
-                                    <label class="form-check-label" for="type_{{ type.value }}">
-                                        {{ type.value|title }}
+                                    <label class="form-check-label" for="type_{{ type.name }}">
+                                        {{ type.name|title }}
                                     </label>
                                 </div>
                                 {% endfor %}
-                            </div>
-                            <div class="form-text">
-                                Staff members can borrow up to 5 books, students up to 3 books
                             </div>
                         </div>
 
@@ -121,6 +118,7 @@
         </div>
     </div>
 </div>
+{% endblock %}
 
 {% block scripts %}
 <script>
